--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <img src="./assets/images/Logo.png" alt="Logo ReciclaTech">
         <nav>
             <ul>
-                <li><a href="">Como Funciona</a></li>
+                <li><a href="#third-section">Como Funciona</a></li>
                 <li><a href="">Doar</a></li>
                 <li><a href="">Adquirir</a></li>
             </ul>
@@ -25,8 +25,8 @@
         <section class="first-section">
             <div class="text-content">
                 <h1>Dê uma segunda vida aos seus eletrônicos!</h1>
-                <p>Conectamos pessoas que querem doar eletrônicos em bom estado com quem precisa deles. Simples,
-                    gratuito e sustentável!</p>
+                <h4>Conectamos pessoas que querem doar eletrônicos em bom estado com quem precisa deles. Simples,
+                    gratuito e sustentável!</h4>
                 <button class="btn-primary">
                     Quero doar
                     <img src="./assets/icons/ICON1.png" alt="ícone de presente">
@@ -114,7 +114,125 @@
                 </div>
             </div>
         </section>
+        <section>
+            <div>
+                <h2>Produtos disponíveis</h2>
+                <h3>Categorias mais populares</h3>
+            </div>
+            <div class="container_products">
+                <div class="card_products">
+                    <img src="./assets/images/Fone.png" alt="Imagem de um fone de ouvido">
+                    <div class="card_text">
+                        <h4>Fones</h4>
+                        <p>Fones em ótimo estado, prontos pra uso.</p>
+                        <button>Quero adquirir</button>
+                    </div>
+                </div>
+                <div class="card_products">
+                    <img src="./assets/images/Notebook.png" alt="Imagem de um notebook">
+                    <div class="card_text">
+                        <h4>Notebooks</h4>
+                        <p>Notebooks funcionando direitinho, prontos pra você usar.</p>
+                        <button>Quero adquirir</button>
+                    </div>
+                </div>
+                <div class="card_products">
+                    <img src="./assets/images/Smartphones.png" alt="Imagem de uns smartphones">
+                    <div class="card_text">
+                        <h4>Smartphones</h4>
+                        <p>Celulares em ótimo estado, prontos pra uma nova jornada.</p>
+                        <button>Quero adquirir</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <h2>O que o pessoal tá falando? </h2>
+        <h3>Histórias reais de quem já usou</h3>
+        <section>
+            <div>
+                <img src="./assets/images/star.png" alt="5 estrelas de avaliação">
+                <p>"Doei meu notebook antigo e em 2 dias já tinha alguém interessado! Ver a felicidade do estudante que recebeu não tem preço! 😊"</p>
+                <div>
+                    <img src="./assets/icons/icon_Doador.png" alt="ícone de presente">
+                    <div>
+                        <h5>João Santos</h5>
+                        <p>Doador</p>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <img src="./assets/images/star.png" alt="5 estrelas de avaliação">
+                <p>"Consegui um iPhone 12 em perfeito estado! A dona anterior cuidou super bem. Economizei uma grana e ainda ajudei o meio ambiente! 🌱"</p>
+                <div>
+                    <img src="./assets/icons/icon_Adquirente.png" alt="ícone de coração">
+                    <div>
+                        <h5>Maria Silva</h5>
+                        <p>Adquirente</p>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <img src="./assets/images/star.png" alt="5 estrelas de avaliação">
+                <p>"Plataforma incrível! Já doei 3 itens e adquiri 2. A comunidade é super respeitosa e o processo é muito fácil! 👏"</p>
+                <div>
+                    <img src="./assets/icons/recicla.png" alt="ícone de reciclagem">
+                    <div>
+                        <h5>Ana Costa</h5>
+                        <p>Usuária ativa</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <h2>Pronto para fazer a diferença? </h2>
+            <h3>Junte-se à nossa comunidade e ajude a criar um mundo mais sustentável, um eletrônico de cada vez!</h3>
+            <div>
+                <button>Começar Agora</button>
+                <button>Saiba Mais</button>
+            </div>
+        </section>
+        <section>
+            <div>
+                <img src="./assets/images/Logo.png" alt="Logo ReciclaTech">
+                <p>Conectando pessoas através da sustentabilidade e tecnologia.</p>
+            </div>
+            <div>
+                <p>Links Rápidos</p>
+                <ul>
+                    <li><a href="">Como Funciona</a></li>
+                    <li><a href="">Doar</a></li>
+                    <li><a href="">Adquirir</a></li>
+                    <li><a href="">Contato</a></li>
+                </ul>
+            </div>
+            <div>
+                <p>Suporte</p>
+                <ul>
+                    <li><a href="">FAQ</a></li>
+                    <li><a href="">Termos de Uso</a></li>
+                    <li><a href="">Privacidade</a></li>
+                    <li><a href="">Ajuda</a></li>
+                </ul>
+            </div>
+            <div>
+                <p>Redes Sociais</p>
+                <p>Siga-nos para novidades e dicas de sustentabilidade!</p>
+                <div>
+                    <a href="">
+                        <img src="./assets/icons/facebook.png" alt="ícone do facebook">
+                    </a>
+                    <a href="">
+                        <img src="./assets/icons/email.png" alt="ícone do email">
+                    </a>
+                    <a href="">
+                        <img src="./assets/icons/twitter.png" alt="ícone do twitter">
+                    </a>
+                </div>
+            </div>
+        </section>
     </main>
-    <footer></footer>
+    <footer>
+        <p>© 2025 ReciclaTech. Todos os direitos reservados. Feito com 💚 para um mundo melhor.</p>
+    </footer>
 </body>
 </html>
