Animações dos botões da primeira section

--- a/index.html
+++ b/index.html
@@ -27,14 +27,16 @@
                 <h1>Dê uma segunda vida aos seus eletrônicos!</h1>
                 <h4>Conectamos pessoas que querem doar eletrônicos em bom estado com quem precisa deles. Simples,
                     gratuito e sustentável!</h4>
-                <button class="btn-primary">
-                    Quero doar
-                    <img src="./assets/icons/ICON1.png" alt="ícone de presente">
-                </button>
-                <button class="btn-secondary">
-                    Quero Adquirir
-                    <img src="./assets/icons/Frame.png" alt="ícone coração">
-                </button>
+                <div class="buttons">
+                    <button class="btn-primary">
+                        Quero doar
+                        <img src="./assets/icons/ICON1.png" alt="ícone de presente">
+                    </button>
+                    <button class="btn-secondary">
+                        Quero Adquirir
+                        <img src="./assets/icons/Frame.png" alt="ícone coração">
+                    </button>
+                </div>
             </div>
             <img src="./assets/images/reciclagem.png" alt="símbolo da reciclagem com eletrônicos">
         </section>
