Mexendo no scss até a quarta sessão

--- a/index.html
+++ b/index.html
@@ -41,15 +41,15 @@
             <img src="./assets/images/reciclagem.png" alt="símbolo da reciclagem com eletrônicos">
         </section>
         <section class="second-section">
-            <div>
+            <div class="second-section_text">
                 <h4>2.5k+</h4>
                 <p>Eletrônicos doados</p>
             </div>
-            <div>
+            <div class="second-section_text">
                 <h4>1.8k+</h4>
                 <p>Famílias beneficiadas</p>
             </div>
-            <div>
+            <div class="second-section_text">
                 <h4>95%</h4>
                 <p>Satisfação dos usuários</p>
             </div>
@@ -60,56 +60,56 @@
         </section>
         <section class="fourth-section">
             <div class="container">
-                <div>
+                <div class="container_titulo">
                     <img src="./assets/icons/icon_Doador.png" alt="ícone em forma de presente representando doador">
-                    <h2>Para Doadores</h2>
+                    <h2 class="container_titulo_doador">Para Doadores</h2>
                 </div>
-                <p>Transforme seu "lixo eletrônico" no tesouro de alguém</p>
+                <p class="container_p">Transforme seu "lixo eletrônico" no tesouro de alguém</p>
                 <div class="topico">
-                    <p>1</p>
-                    <div>
+                    <p class="topico_p">1</p>
+                    <div class="topico_text">
                         <h3>Cadastre seu eletrônico</h3>
                         <p>Tire umas fotos, descreva o estado e pronto!</p>
                     </div>
                 </div>
                 <div class="topico">
-                    <p>2</p>
-                    <div>
+                    <p class="topico_p">2</p>
+                    <div class="topico_text">
                         <h3>Aguarde o match</h3>
                         <p>Alguém vai se interessar pelo seu item</p>
                     </div>
                 </div>
                 <div class="topico">
-                    <p>3</p>
-                    <div>
+                    <p class="topico_p">3</p>
+                    <div class="topico_text">
                         <h3>Combine a entrega</h3>
                         <p>Vocês decidem como fazer a entrega</p>
                     </div>
                 </div>
             </div>
             <div class="container">
-                <div>
+                <div class="container_titulo">
                     <img src="./assets/icons/icon_Adquirente.png" alt="ícone em forma de coração representando adquirente">
-                    <h2>Para Adquirentes</h2>
+                    <h2 class="container_titulo_adquirente">Para Adquirentes</h2>
                 </div>
-                <p>Encontre o eletrônico dos seus sonhos de graça</p>
+                <p class="container_p">Encontre o eletrônico dos seus sonhos de graça</p>
                 <div class="topico">
-                    <p>1</p>
-                    <div>
+                    <p class="topico_q">1</p>
+                    <div class="topico_text">
                         <h3>Explore os itens</h3>
                         <p>Navegue pelos eletrônicos disponíveis</p>
                     </div>
                 </div>
                 <div class="topico">
-                    <p>2</p>
-                    <div>
+                    <p class="topico_q">2</p>
+                    <div class="topico_text">
                         <h3>Demonstre interesse</h3>
                         <p>Clique em "Tenho interesse" no item</p>
                     </div>
                 </div>
                 <div class="topico">
-                    <p>3</p>
-                    <div>
+                    <p class="topico_q">3</p>
+                    <div class="topico_text">
                         <h3>Receba seu novo gadget</h3>
                         <p>Combine com o doador e seja feliz!</p>
                     </div>
