Continuando o SCSS do projeto

--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
                 </div>
             </div>
         </section>
-        <section>
-            <div>
+        <section class="fifth-section">
+            <div class="fifth-section_header">
                 <h2>Produtos disponíveis</h2>
                 <h3>Categorias mais populares</h3>
             </div>
@@ -148,8 +148,8 @@
                 </div>
             </div>
         </section>
-        <h2>O que o pessoal tá falando? </h2>
-        <h3>Histórias reais de quem já usou</h3>
+        <h2 class="titulo_quinta_sessao">O que o pessoal tá falando? </h2>
+        <h3 class="subtitulo_quinta_sessao">Histórias reais de quem já usou</h3>
         <section>
             <div>
                 <img src="./assets/images/star.png" alt="5 estrelas de avaliação">
