--- a/index.html
+++ b/index.html
@@ -150,55 +150,55 @@
         </section>
         <h2 class="titulo_quinta_sessao">O que o pessoal tá falando? </h2>
         <h3 class="subtitulo_quinta_sessao">Histórias reais de quem já usou</h3>
-        <section>
-            <div>
+        <section class="sixth-section">
+            <div class="sixth-section_card">
                 <img src="./assets/images/star.png" alt="5 estrelas de avaliação">
                 <p>"Doei meu notebook antigo e em 2 dias já tinha alguém interessado! Ver a felicidade do estudante que recebeu não tem preço! 😊"</p>
-                <div>
-                    <img src="./assets/icons/icon_Doador.png" alt="ícone de presente">
-                    <div>
+                <div class="usuario-sixth">
+                    <img src="./assets/icons/presente2.png" alt="ícone de presente">
+                    <div class="usuario-sixth_text">
                         <h5>João Santos</h5>
                         <p>Doador</p>
                     </div>
                 </div>
             </div>
-            <div>
+            <div class="sixth-section_card">
                 <img src="./assets/images/star.png" alt="5 estrelas de avaliação">
                 <p>"Consegui um iPhone 12 em perfeito estado! A dona anterior cuidou super bem. Economizei uma grana e ainda ajudei o meio ambiente! 🌱"</p>
-                <div>
-                    <img src="./assets/icons/icon_Adquirente.png" alt="ícone de coração">
-                    <div>
+                <div class="usuario-sixth">
+                    <img src="./assets/icons/heart.png" alt="ícone de coração">
+                    <div class="usuario-sixth_text">
                         <h5>Maria Silva</h5>
                         <p>Adquirente</p>
                     </div>
                 </div>
             </div>
-            <div>
+            <div class="sixth-section_card">
                 <img src="./assets/images/star.png" alt="5 estrelas de avaliação">
                 <p>"Plataforma incrível! Já doei 3 itens e adquiri 2. A comunidade é super respeitosa e o processo é muito fácil! 👏"</p>
-                <div>
+                <div class="usuario-sixth">
                     <img src="./assets/icons/recicla.png" alt="ícone de reciclagem">
-                    <div>
+                    <div class="usuario-sixth_text">
                         <h5>Ana Costa</h5>
                         <p>Usuária ativa</p>
                     </div>
                 </div>
             </div>
         </section>
-        <section>
+        <section class="seventh-section">
             <h2>Pronto para fazer a diferença? </h2>
             <h3>Junte-se à nossa comunidade e ajude a criar um mundo mais sustentável, um eletrônico de cada vez!</h3>
-            <div>
-                <button>Começar Agora</button>
-                <button>Saiba Mais</button>
+            <div class="seventh-button">
+                <button class="seventh-button_p">Começar Agora</button>
+                <button class="seventh-button_q">Saiba Mais</button>
             </div>
         </section>
-        <section>
-            <div>
-                <img src="./assets/images/Logo.png" alt="Logo ReciclaTech">
+        <section class="octave-section">
+            <div class="octave-section_1">
+                <img src="./assets/images/logo1.png" alt="Logo ReciclaTech">
                 <p>Conectando pessoas através da sustentabilidade e tecnologia.</p>
             </div>
-            <div>
+            <div class="octave-section_2">
                 <p>Links Rápidos</p>
                 <ul>
                     <li><a href="">Como Funciona</a></li>
@@ -207,7 +207,7 @@
                     <li><a href="">Contato</a></li>
                 </ul>
             </div>
-            <div>
+            <div class="octave-section_3">
                 <p>Suporte</p>
                 <ul>
                     <li><a href="">FAQ</a></li>
@@ -216,10 +216,10 @@
                     <li><a href="">Ajuda</a></li>
                 </ul>
             </div>
-            <div>
-                <p>Redes Sociais</p>
-                <p>Siga-nos para novidades e dicas de sustentabilidade!</p>
-                <div>
+            <div class="octave-section_4">
+                <p class="octave-section_text">Redes Sociais</p>
+                <p class="octave-section_text_1">Siga-nos para novidades e dicas de sustentabilidade!</p>
+                <div class="icons-social-media">
                     <a href="">
                         <img src="./assets/icons/facebook.png" alt="ícone do facebook">
                     </a>
