--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
             </div>
         </section>
     </main>
-    <footer>
+    <footer class="footer">
         <p>© 2025 ReciclaTech. Todos os direitos reservados. Feito com 💚 para um mundo melhor.</p>
     </footer>
 </body>
